@@ -1,3 +1,10 @@
+2006-06-11  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
+
+    * backend/commit.py: commit() implemented
+    * backend/fileops.py: remove() implemented
+    * backend/errors.py: more exceptions added
+    * more detailed comments for the different functions
+
 2006-06-10  Szilveszter Farkas <Szilveszter.Farkas@gmail.com>
 
     * backend/errors.py: some basic exceptions added
